# pkg/restapi/operations/payments/delete_payment_responses.go
@@ -1,0 +1,82 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package payments
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	models "github.com/volmedo/pAPI/pkg/models"
+)
+
+// DeletePaymentNoContentCode is the HTTP code returned for type DeletePaymentNoContent
+const DeletePaymentNoContentCode int = 204
+
+/*DeletePaymentNoContent Payment deleted OK. No body content will be returned
+
+swagger:response deletePaymentNoContent
+*/
+type DeletePaymentNoContent struct {
+}
+
+// NewDeletePaymentNoContent creates DeletePaymentNoContent with default headers values
+func NewDeletePaymentNoContent() *DeletePaymentNoContent {
+
+	return &DeletePaymentNoContent{}
+}
+
+// WriteResponse to the client
+func (o *DeletePaymentNoContent) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(204)
+}
+
+// DeletePaymentNotFoundCode is the HTTP code returned for type DeletePaymentNotFound
+const DeletePaymentNotFoundCode int = 404
+
+/*DeletePaymentNotFound Payment Not Found
+
+swagger:response deletePaymentNotFound
+*/
+type DeletePaymentNotFound struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.APIError `json:"body,omitempty"`
+}
+
+// NewDeletePaymentNotFound creates DeletePaymentNotFound with default headers values
+func NewDeletePaymentNotFound() *DeletePaymentNotFound {
+
+	return &DeletePaymentNotFound{}
+}
+
+// WithPayload adds the payload to the delete payment not found response
+func (o *DeletePaymentNotFound) WithPayload(payload *models.APIError) *DeletePaymentNotFound {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the delete payment not found response
+func (o *DeletePaymentNotFound) SetPayload(payload *models.APIError) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *DeletePaymentNotFound) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(404)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
